--- a/SlackBot/package.json
+++ b/SlackBot/package.json
@@ -5,9 +5,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "node app.js",
     "lint": "eslint --ext .js .",
-    "dev": "nodemon index.js"
+    "dev": "nodemon app.js"
   },
   "author": "hybridx",
   "license": "MIT",
