--- a/API/.env.example
+++ b/API/.env.example
@@ -1,1 +1,3 @@
-AUTH_KEY="Basic XXX"
+JIRA_AUTH_KEY="Basic XXX"      # `echo <your_email>:<access_token> | base64`
+JIRA_HOST="https://"
+PROJECT_KEY="KAN"
