--- a/Model/package.json
+++ b/Model/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "model",
+  "name": "aimodel",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
-    "express": "^4.19.1"
+    "express": "^4.19.1",
+    "pino": "^8.20.0",
+    "pino-pretty": "^11.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
